--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,13 @@ GPo source: https://github.com/gispos/AvsPmod
 GPo releases: https://github.com/gispos/AvsPmod/releases
 
 --------------------------
+Version 2.6.0.9 [2019-08-10] GPo
+--------------------------
+- Bugfix zoom video window
+- Encoder gui and ffmpeg.presets update
+Note: In the AvsPmod 'tools' directory the 'encoder_gui.pyo' has to be deleted 
+
+--------------------------
 Version 2.6.0.8 [2019-07-22] GPo
 --------------------------
 - Added middle mouse button behavior on the script can be changed. options>misc (now default: show frame if script not empty)
