--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,19 @@ GPo source: https://github.com/gispos/AvsPmod
 GPo releases: https://github.com/gispos/AvsPmod/releases
 
 --------------------------
+Version 2.6.1.0 [2019-09-05] GPo
+--------------------------
+- Bugfix filename "Quick save Image"
+---- Quick save filename stores the last saved name (Save Image as...) 
+---- Quick save filename does reset to default (Option>Save/Load>"Image default filename pattern") on Startup and  any Tab close
+---- Save Image as... resets always to default filename
+---- To apply a desired file name:
+--------- You must first save the image with "Save Image as ...".
+--------- The file name is then used for "Quick save Image".
+- Zoom increased to 40x
+- Update ffmpg.presets and x264.presets
+
+--------------------------
 Version 2.6.0.9 [2019-08-10] GPo
 --------------------------
 - Bugfix zoom video window
