--- a/changelog.txt
+++ b/changelog.txt
@@ -12,6 +12,11 @@ GPo source: https://github.com/gispos/AvsPmod
 GPo releases: https://github.com/gispos/AvsPmod/releases
 
 --------------------------
+Version 2.6.2.5 [2020-05-25] GPo
+--------------------------
+fixed: refresh video (F5)
+
+--------------------------
 Version 2.6.2.4 [2020-05-24] GPo
 --------------------------
 fixed: when the slider window was visible and a new tab was created the image in the video window disappeared at this time.
